--- a/conf.yaml
+++ b/conf.yaml
@@ -50,7 +50,7 @@ variables:
       type: spot
       asg_max_size: 1
     - name: on-demand-group
-      instance_type: t3.medium
+      instance_type: {{ remoteState "common.gcr.registry_url" }}blabla{{ remoteState "infra2.vpc.id" }}
       asg_max_size: 1
       root_volume_size: 20
   registry: {{ remoteState "common.gcr.registry_url" }}
